[#59] feat: 단일 게시글 조회 구현
